# brainrot

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CODE-OF-CONDUCT.md  LICENSE  README.md  README.nfo  bun.lockb  compose-dev.yml  deps.docker-compose.yml  docker-compose.yml  example.env  get-started.cfgu.json  main.ts  package.json  plygrnd.code-workspace  pnpm-lock.yaml  pnpm-workspace.yml  tsconfig.json  typestat.json
apps/: README.md
software-packaging/python/alice/: .gitignore  .output.txt  Makefile  RESEARCH.md  USER_GUIDE.md  __main__.py  flake.nix  pyoxidizer.bzl  pyproject.toml  vllm.sh
software-packaging/python/alice/.github/workflows/: build-pyoxidizer.yml  build.yml
software-packaging/python/alice/docs/: ALICE_WAY.md  IMPLEMENTATION_PLAN.md  README.md  RESEARCH.md  SUMMARY.md  credits.md  installation.md  usage.md
software-packaging/python/alice/docs/chats/: 001.md  002.md  003.md  004.md
software-packaging/python/alice/docs/component/: affinity-manager.md  model-function-calling.md
software-packaging/python/alice/docs/component/inference-engine/: README.md  request-caching.md
software-packaging/python/alice/docs/concepts/: affinity.md  literature.md
software-packaging/python/alice/docs/concepts/associates/: README.md  auditor.md  automatic-continua-tor.md  automatic-fixer.md  innkeeper.md  name-generator.md  scribbler.md  transmogifier.md  wizard.md
software-packaging/python/alice/docs/concepts/associates/experimental-associates/: README.md  (+1 more)
software-packaging/python/alice/docs/concepts/quest/: README.md  objectives.md  shadow-realm.md  time-traveling.md
software-packaging/python/alice/docs/development/: architecture-decision-records-adrs.md  request-for-comments-rfcs.md  requests-for-discussion-rfds.md
software-packaging/python/alice/docs/development/development-guide/: README.md  code-research.md  technology-stack.md
software-packaging/python/alice/docs/development/development-iterations/: README.md  cycle-1-project-kickoff.md
software-packaging/python/alice/resources/preprompts/: file_format_diff
software-packaging/python/alice/resources/specs/: alice-linux.spec  alice-windows.spec
software-packaging/python/alice/src/: __init__.py
(+1775 files in other folders)
