[project]
name = "alice"
version = "0.1.0"
description = "AI Development Assistant with TFLOP calculation capabilities"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "transformers>=4.0.0",
    "torch>=2.0.0",
    "pathspec>=0.11.0",
    "watchdog>=3.0.0",
    "psutil>=5.9.0",
    "outlines>=0.2.1",
    "click-spinner>=0.1.10",
    "accelerate>=1.4.0",
    "langchain>=0.0.300",
    "langchain-community>=0.0.10",
    "langchain-core>=0.1.0",
    "langchain-huggingface>=0.0.1",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "rich>=13.7.0",
    "pytest>=8.3.5",
    "pydantic>=2.10.6",
    "logfire>=3.7.1",
    "optimum>=1.24.0",
    "lru-cache>=0.2.3",
    "pyperclip>=1.9.0",
    "textual>=2.1.2",
    "litellm>=1.34.2",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.2.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pyright>=1.1.396",
    "pex>=2.33.3",
    "build>=1.2.2.post1",
    "pyinstaller>=6.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"
[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.hatch.build.targets.wheel]
packages = ["."]


[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[project.scripts]
alice = "__main__:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
